--- a/gmail-animation.html
+++ b/gmail-animation.html
@@ -3,7 +3,7 @@
         <Title> New Gmail loading animation (2018)</Title>
         <meta name="description" content="New Gmail loading animation in 2018.New Gmail loading animation only CSS ">
         <meta name="keywords" content="HTML,CSS,New Gmail loading animation, 2018,">
-        <meta name="author" content="Ashutsosh Malve">
+        <meta name="author" content="Ashutosh Malve">
     </head>
     <body>
     </body>
